--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
+    <link rel="icon" type="image/svg+xml" href="https://github.com/Lab-EC-UPC/assets/blob/main/logo-ec-data.png?raw=true" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="Laboratorio EC-Data UPC" content="Lab EC-Data UPC" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
